Bug 51507 - FILEOPEN 3.5 document: conditional formatting of type "Formula is" not recognized correctly, lost after saved
Summary: FILEOPEN 3.5 document: conditional formatting of type "Formula is" not recog...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: All All
: medium critical
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
: 57246 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-06-28 00:19 UTC by Jean-Baptiste Faure
Modified: 2012-11-18 12:12 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc saved with LO 3.6 (19.79 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-28 00:19 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-06-28 00:19:20 UTC
Created attachment 63548 [details]
bugdoc saved with LO 3.6

Version : 3.6.0.0.beta2+ (Build ID: 2992b53)
Ubuntu 11.10 x86_64 with gnome-shell

The attached bugdoc is a spreadsheet designed with LO 3.5 and modified with LO 3.6. this spreadsheet contains conditional formatting of both types "Value is" and "Formula is". The last type is used to set the backgroung of each line, alternating between blank and yellow background.

steps to reproduce:
- open the bugdoc with LO 3.5 : works fine. Close the file without saving.
- open the bugdoc with LO 3.6 : alternating background are lost
- select cell C6 and open Conditional Formatting dialog : condition is of type "Formula is" but the formula shown is "0" instead of "MOD(LIGNE();2)=0"
- in the dialog the string "Apply style" is not there unlike condition "Value is"
- more generally :
  * dialog window is too small
  * dropdown list for style names is too small
  * it seems that exemple box is not functionnal when reopening the file

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2012-06-28 02:36:14 UTC
Hi Markus, It seems that is in your area :-)
Do you need a screencopy ?

Best regards. JBF
Comment 2 Rainer Bielefeld Retired 2012-06-28 02:39:49 UTC
[Reproducible] with Server Installation of  "LibreOffice 3.6.0.0.beta2  German UI/Locale [Build-ID: f010139] on German WIN7 Home Premium (64bit) 

I am a little worried about subjece line "saved", IMHO the main problem is "Fileopen ... not recognize condition formatting forumla". The lost CF after save is a result of that root problem.

We have a new conditional formatting dialog, but the main problem seems to be that the formula for the condition will not be recognized by 3.6.0. Saving document under new name and reopening with 3.5.5 shows "0" instead of a formula as stated.

Still a problem with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3985521]" (tinderbox: W2008R2@16-minimal_build, pull time 2012-06-24)

was still ok with beta1

@Jean-Baptiste
Please feel free to revert my subject line if you do not agree

@Kohei / Markus:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 3 Markus Mohrhard 2012-06-28 02:57:06 UTC
It is one for me.
Comment 4 Markus Mohrhard 2012-06-29 18:04:25 UTC
Ok this one was just a simple copy&paste error.
Comment 5 Not Assigned 2012-06-29 18:24:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8451dba20390387289765b112568166a5f411fe

the end of the formula is the closing bracket, fdo#51507
Comment 6 Not Assigned 2012-06-29 18:25:12 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66018b9685dd7337daae9bb62ffeb43cd4161caf&g=libreoffice-3-6

the end of the formula is the closing bracket, fdo#51507


It will be available in LibreOffice 3.6.
Comment 7 Jean-Baptiste Faure 2012-06-30 02:55:47 UTC
Thank you Markus :-)
Verified on Version 3.6.0.0.beta2+ (Build ID: 66018b9).

Best regards. JBF
Comment 8 Jean-Baptiste Faure 2012-07-01 05:23:36 UTC
*** Bug 51614 has been marked as a duplicate of this bug. ***
Comment 9 Rainer Bielefeld Retired 2012-11-18 12:12:10 UTC
*** Bug 57246 has been marked as a duplicate of this bug. ***