the end of the formula is the closing bracket, fdo#51507

Change-Id: I2cc6505571ff62d44443c161317b61033be0d7ec